Moved blog code over from previous asp core (1) project

--- a/Blog/appsettings.json
+++ b/Blog/appsettings.json
@@ -1,8 +1,19 @@
-﻿{
+{
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
       "Default": "Warning"
+    }
+  },
+  "ApplicationInsights": {
+    "InstrumentationKey": "3815bd1f-0fec-4a14-9f15-5f39980d7354"
+  },
+  "Storage": {
+    "UseDocumentDB": false,
+    "DocumentDBWrapperConfig": {
+      "Endpoint": "https://steeleblogdb.documents.azure.com:443/",
+      "DatabaseId": "Blog",
+      "CollectionId": "Entries"
     }
   }
 }
